Add> _config.yml> baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ subtitle                 : "From 2020.02.26"
 name                     : "Hyuk Min"
 description              : "42서울 1기 개발자 잉혁킹의 '공부 노트', 'TIL: Today I Learned', '강좌' 등을 올리는 기술 블로그"
 url                      : "https://jud210.github.io"
-baseurl                  : ""
+baseurl                  : "/my_blog"
 # 프로젝트 별 페이지를 만들 때 baseurl은 /projectname처럼 써야 합니다.
 # 이렇게 두어야 https://yourname.github.io/projectname의 url로 접속할 수 있습니다.
 
