--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "dark"
 # Site Settings
 locale                   : "ko-KR"
 # locale                 : "en-US"
-title                    : "개발자 잉혁킹 성장기.txt"
+title                    : "개발자_잉혁킹_성장기.blog"
 title_separator          : "_"
 subtitle                 : "From 2020.02.26"
 name                     : "Hyuk Min"
