Edit> subtitle: "Since 2020.02.26"

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ locale                   : "ko-KR"
 # locale                 : "en-US"
 title                    : "개발자_잉혁킹_성장기.blog"
 title_separator          : "_"
-subtitle                 : "From 2020.02.26"
+subtitle                 : "Since 2020.02.26"
 name                     : "Hyuk Min"
 description              : "42서울 1기 개발자 잉혁킹의 '공부 노트', 'TIL: Today I Learned', '강좌' 등을 올리는 기술 블로그"
 url                      : "https://jud210.github.io"
