--- a/_config.yml
+++ b/_config.yml
@@ -138,14 +138,14 @@ analytics:
 # Site Author
 author:
   name             : "민 혁"
-  avatar           : "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio-photo.png"
   bio              : "**42서울 1기** 재학생"
   location         : "대한민국, 서울"
   email            : judicious210@gmail.com
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: mailto:judicious210@gmail.com
+    # - label: "Email"
+      # icon: "fas fa-fw fa-envelope-square"
+      # url: mailto:judicious210@gmail.com
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/jud210"
