--- a/_config.yml
+++ b/_config.yml
@@ -138,7 +138,7 @@ analytics:
 # Site Author
 author:
   name             : "민 혁"
-  avatar           : "/assets/images/bio-photo.png"
+  avatar           : "/assets/images/bio-photo.jpg"
   bio              : "**42서울 1기** 재학생"
   location         : "대한민국, 서울"
   email            : judicious210@gmail.com
