--- a/_config.yml
+++ b/_config.yml
@@ -129,10 +129,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
-    anonymize_ip         : # true, false (default)
+    tracking_id          : UA-160657280-1
+    anonymize_ip         : false # (default)
 
 
 # Site Author
