--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : _6sOtFfn5rxSKW4dwTvH36dYAVSu8c1GO_aU6oMW7Ao
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
