Update post: attach images to about

--- a/_config.yml
+++ b/_config.yml
@@ -141,7 +141,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "민 혁"
+  name             : "잉혁킹"
   avatar           : "/assets/images/bio-photo.jpg"
   bio              : "**42서울 1기** 재학생"
   location         : "대한민국, 서울"
