Add pages: category & tag

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,14 @@
 # main links
 main:
+  # - title: "Sample Collections"
+  #   url: /collection-archive/
+  # - title: "Sitemap"
+  #   url: /sitemap/
   - title: "잉혁킹이란"
     url: /about/
-  - title: "Sample Posts"
+  - title: "카테고리"
+    url: /categories/
+  - title: "태그"
+    url: /tags/
+  - title: "모든 글"
     url: /year-archive/
-  - title: "Sample Collections"
-    url: /collection-archive/
-  - title: "Sitemap"
-    url: /sitemap/
