--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ google:
 google_site_verification : _6sOtFfn5rxSKW4dwTvH36dYAVSu8c1GO_aU6oMW7Ao
 bing_site_verification   :
 yandex_site_verification :
-naver_site_verification  : naver3cae6e7057b9c680662bb007a232cf68
+naver_site_verification  : # I already verified by uploading naver3cae6e7057b9c680662bb007a232cf68.html
 
 # Social Sharing
 twitter:
