--- a/_config.yml
+++ b/_config.yml
@@ -145,9 +145,10 @@ analytics:
 
 # Site Author
 author:
+  home             : "/about/"
   name             : "잉혁킹"
   avatar           : "/assets/images/bio-photo.jpg"
-  bio              : "**42서울 1기** 재학생"
+  bio              : "**42서울 1기** 재학생<br>Unscripted freak"
   location         : "대한민국, 서울"
   email            : judicious210@gmail.com
   links:
