Delete a link to Life RPG

--- a/_config.yml
+++ b/_config.yml
@@ -155,9 +155,9 @@ author:
     - label: "YouTube"
       icon: "fab fa-fw fa-youtube"
       url: "https://www.youtube.com/channel/UCYPWzViA-uq9sBop7ssYaEg"
-    - label: "Life RPG"
-      icon: "fas fa-fw fa-table"
-      url: "https://goo.gl/qnehEQ"
+    # - label: "Life RPG"
+    #   icon: "fas fa-fw fa-table"
+    #   url: "https://goo.gl/qnehEQ"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/jud210"
@@ -180,9 +180,9 @@ footer:
     - label: "YouTube"
       icon: "fab fa-fw fa-youtube"
       url: "https://www.youtube.com/channel/UCYPWzViA-uq9sBop7ssYaEg"
-    - label: "Life RPG"
-      icon: "fas fa-fw fa-table"
-      url: "https://goo.gl/qnehEQ"
+    # - label: "Life RPG"
+    #   icon: "fas fa-fw fa-table"
+    #   url: "https://goo.gl/qnehEQ"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/jud210"
